[tool.black]
line-length = 120
target-version = ["py310"]

[flake8]
max-line-length = 120

[tool.isort]
line_length = 120

[tool.poetry]
name = "csv-enricher"
version = "0.1.0"
description = ""
authors = ["recepsirin"]
readme = "README.md"
packages = [{include = "csv_enricher"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
asyncio = "^3.4.3"
aiocsv = "^1.3.2"
types-aiofiles = "^23.2.0.20240403"
aiofiles = "^23.2.1"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
types-aiofiles = "^23.2.0.20240403"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
